--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -14,7 +14,7 @@
 <!ENTITY Ctr_navthrobber	"Ενδείκτης δραστηριότητας">
 <!ENTITY Ctr_sidebarbutton	"(Πλευρική στήλη)">
 <!ENTITY Ctr_windowcontrols	"Ελαχιστοποίηση/επαναφορά/κλείσιμο (Πλήρης οθόνη)">
-<!ENTITY Ctr_rr				"Επανεκκινήστε τον &brandShortName;!">
+<!ENTITY Ctr_rr				"Απαιτείται επανεκκίνηση!">
 
 <!ENTITY Ctr_cuibuttons		"Κουμπιά">
 <!ENTITY Ctr_cuibutnormal	"Κανονικά">
@@ -36,7 +36,7 @@
 <!ENTITY Ctr_tabs2			"Καμπυλόγραμμες καρτέλες (εναλλακτική τεχνοτροπία)">
 <!ENTITY Ctr_tabs3			"Καμπυλόγραμμες καρτέλες (εναλλακτική τεχνοτροπία, Aero)">
 <!ENTITY Ctr_tabforminfo	"Η εμφάνιση των καρτελών ελέγχεται από το τρέχον θέμα.">
-<!ENTITY Ctr_coltabsinfo	"Tab appearance is not fully compatible to 'ColorfulTabs' add-on!">
+<!ENTITY Ctr_coltabsinfo	"Η εμφάνιση καρτελών δεν είναι πλήρως συμβατή με την επέκταση «ColorfulTabs»!">
 <!ENTITY Ctr_tabsontop0		"Καρτέλες στο πάνω μέρος (προεπιλογή)">
 <!ENTITY Ctr_tabsontop1		"Καρτέλες στο πάνω μέρος --- ορισμός χαρακτηριστικού [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"Καρτέλες όχι στο πάνω μέρος (v1) --- ορισμός χαρακτηριστικού [tabsontop=false]">
@@ -53,7 +53,7 @@
 <!ENTITY Ctr_tabwidthinfo	"Το εύρος καρτελών ελέγχεται από την επέκταση «TabMixPlus»">
 <!ENTITY Ctr_tabwidthinfo2	"Το εύρος καρτελών ελέγχεται από την επέκταση «TabUtilities»">
 <!ENTITY Ctr_tabwidthinfo3	"Τιμές κάτω από 48px θα προκαλέσουν δυσλειτουργίες στις περισσότερες περιπτώσεις!">
-<!ENTITY Ctr_tabinsertion	"Εισαγωγή συναφούς καρτέλας μετά την τρέχουσα καρτέλα (about:config)">
+<!ENTITY Ctr_tabinsertion	"Εισαγωγή συναφούς καρτέλας μετά την τρέχουσα καρτέλα (προτίμηση about:config)">
 <!ENTITY Ctr_emptyfavicon	"Επαναφορά κενού εικονιδίου (εάν ένας ιστότοπος δεν διαθέτει εικονίδιο)">
 <!ENTITY Ctr_noemptypticon	"Αφαίρεση κενού εικονιδίου από καρτέλες εφαρμογών">
 <!ENTITY Ctr_e10stab_notd	"Καρτέλες E10s: αφαίρεση υπογράμμισης">
@@ -66,18 +66,18 @@
 <!ENTITY Ctr_closetab_hfot	"Απόκρυψη για μόνο μία ορατή καρτέλα">
 <!ENTITY Ctr_closealt		"Κόκκινο εικονίδιο κλεισίματος">
 <!ENTITY Ctr_closeonleft	"Εναλλακτική θέση στην καρτέλα">
-<!ENTITY Ctr_close_wwltab	"Κλείσιμο παραθύρου κλείνοντας την τελευταία ορατή καρτέλα (about:config)">
+<!ENTITY Ctr_close_wwltab	"Κλείσιμο παραθύρου κλείνοντας την τελευταία ορατή καρτέλα (προτίμηση about:config)">
 
-<!ENTITY Ctr_hctpinfotab	"Some tab variations are not compatible to 'Hide Caption Titlebar Plus' add-on.">
-<!ENTITY Ctr_hctpinfoab		"Button on titlebar is not compatible to 'Hide Caption Titlebar Plus' add-on.">
+<!ENTITY Ctr_hctpinfotab	"Κάποιες παραλλαγές καρτελών δεν είναι συμβατές με την επέκταση «Hide Caption Titlebar Plus».">
+<!ENTITY Ctr_hctpinfoab		"Το κουμπί στη γραμμή τίτλου δεν είναι συμβατό με την επέκταση «Hide Caption Titlebar Plus».">
 
 <!ENTITY Ctr_appbutton		"Κουμπί εφαρμογής">
 <!ENTITY Ctr_appbutton0		"Απενεργοποιημένο">
 <!ENTITY Ctr_appbutton1		"Στην εργαλειοθήκη">
 <!ENTITY Ctr_appbutton1wt	"Στην εργαλειοθήκη (μόνο κείμενο)">
-<!ENTITY Ctr_appbutton2		"Στη γραμμή τίτλου [&brandShortName;]">
-<!ENTITY Ctr_appbutton2h	"Στη γραμμή τίτλου [&brandShortName;] (σε απόκρυψη)">
-<!ENTITY Ctr_appbutton2io	"Στη γραμμή τίτλου [&brandShortName;] (μόνο εικονίδιο)">
+<!ENTITY Ctr_appbutton2		"Στη γραμμή τίτλου του [&brandShortName;]">
+<!ENTITY Ctr_appbutton2h	"Στη γραμμή τίτλου του [&brandShortName;] (σε απόκρυψη)">
+<!ENTITY Ctr_appbutton2io	"Στη γραμμή τίτλου του [&brandShortName;] (μόνο εικονίδιο)">
 <!ENTITY Ctr_paneluibtweak	"Πορτοκαλί κουμπί μενού πίνακα στην εργαλειοθήκη καρτελών">
 <!ENTITY Ctr_appbuttonc_o	"Πορτοκαλί χρώμα κουμπιού (προεπιλογή)">
 <!ENTITY Ctr_appbuttonc_a	"Μπλε χρώμα κουμπιού (Aurora)">
@@ -136,13 +136,13 @@
 <!ENTITY Ctr_cpanelmenus	"Μενού πίνακα: συνεπτυγμένη προβολή (σελιδοδείκτες, ιστορικό κλπ.)">
 <!ENTITY Ctr_hidezoomres	"Στοιχεία ελέγχου μεγέθυνσης σε εργαλειοθήκη: απόκρυψη κουμπιού επεναφοράς επιπέδου μεγέθυνσης">
 <!ENTITY Ctr_alt_newtabp	"Σελίδα νέας καρτέλας: εναλλακτική εμφάνιση">
-<!ENTITY Ctr_alt_addonsp	"Add-ons 'more info' page: alternative appearance">
-<!ENTITY Ctr_bmbutpanelm	"Bookmarks menu button: panel menu appearance">
-<!ENTITY Ctr_bmbutnotext	"Bookmarks menu button: hide label on bookmarks bar">
-<!ENTITY Ctr_skipprintpr	"Print button: skip print preview">
-<!ENTITY Ctr_tbconmenu		"Toolbar context menu: hide 'move to menu', 'remove from toolbar', 'reload/bookmark all tabs' and 'undo close tab'">
+<!ENTITY Ctr_alt_addonsp	"Σελίδα επεκτάσεων «Περισσότερα»: εναλλακτική εμφάνιση">
+<!ENTITY Ctr_bmbutpanelm	"Μενού κουμπιού-μενού σελιδοδεικτών: εμφάνιση μενού πίνακα">
+<!ENTITY Ctr_bmbutnotext	"Κουμπί-μενού σελιδοδεικτών: απόκρυψη ετικέτας στην εργαλειοθήκη σελιδοδεικτών">
+<!ENTITY Ctr_skipprintpr	"Κουμπί «Εκτύπωση»: παράκαμψη προεπισκόπησης εκτύπωσης">
+<!ENTITY Ctr_tbconmenu		"Μενού περιεχομένου εργαλειοθήκης: Απόκρυψη «Μετακίνηση στο μενού», «Απομάκρυνση από την εργαλειοθήκη», «Ανανέωση όλων των καρτελών», «Όλες οι καρτέλες σε σελιδοδείκτη…» και «Αναίρεση κλεισίματος καρτέλας»">
 <!ENTITY Ctr_noresizerxp	"Απόκρυψη λαβής αλλαγής μεγέθους του παραθύρου (Windows XP)">
-<!ENTITY Ctr_extraurlkeycb	"Open additional location bar (Cmd/Ctrl+">
+<!ENTITY Ctr_extraurlkeycb	"Άνοιγμα επιπρόσθετης γραμμής τοποθεσιών (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Μενού πίνακα: απόκρυψη ετικετών κουμπιών">
 <!ENTITY Ctr_menupopupscr	"Αναδυόμενα μενού: εμφάνιση γραμμών κύλισης αντί για βέλη κύλισης">
 
@@ -185,7 +185,7 @@
 <!ENTITY Ctr_urlbardropm	"Μετακίνηση του δείκτη ανάπτυξης στο τέλος της γραμμής τοποθεσιών">
 <!ENTITY Ctr_hideprbutton	"Απόκρυψη εικονιδίου ειδοποίησης φραγής αναδυόμενου παραθύρου">
 <!ENTITY Ctr_urlbar_ib		"Κουμπί ταυτοποίησης τοποθεσιών (πλαίσιο ταυτοποίησης)">
-<!ENTITY Ctr_verifiedcolors	"Πράσινο/μπλε κουμπί για επαληθευμένες ιστοσελίδες και ασφαλείς συνδέσεις">
+<!ENTITY Ctr_verifiedcolors	"Χρώματα κουμπιού πράσινο/μπλε για επαληθευμένες ιστοσελίδες και ασφαλείς συνδέσεις">
 <!ENTITY Ctr_faviconurl		"Εικονίδιο URL: τρέχον εικονίδιο τοποθεσιών">
 <!ENTITY Ctr_padlock_hid	"Εικονίδιο «Λουκέτο» για ασφαλείς συνδέσεις (κρυμμένο)">
 <!ENTITY Ctr_padlock_def	"Εικονίδιο «Λουκέτο» για ασφαλείς συνδέσεις (προεπιλογή)">
@@ -212,10 +212,10 @@
 
 <!ENTITY Ctr_toolbars		"Εργαλειοθήκες">
 <!ENTITY Ctr_dblclnewtab	"Άνοιγμα νέας καρτέλας με διπλό κλικ (χρήση browser.newtab.url)">
-<!ENTITY Ctr_hidetbwot		"Απόκρυψη εργαλειοθήκης καρτελών με μία ορατή καρτέλα">
+<!ENTITY Ctr_hidetbwot		"Απόκρυψη εργαλειοθήκης καρτελών με μόνο μία ορατή καρτέλα">
 <!ENTITY Ctr_hidetbwote		"Μείωση καθυστέρησης απόκρυψης κατά την εκκίνηση">
-<!ENTITY Ctr_hidetbwote_i	"Could cause glitches on tabs toolbar">
-<!ENTITY Ctr_hidetbwote2	"Keep titlebar (tabs on top)">
+<!ENTITY Ctr_hidetbwote_i	"Ενδέχεται να προκαλέσει δυσλειτουργίες στην εργαλειοθήκη καρτελών">
+<!ENTITY Ctr_hidetbwote2	"Διατήρηση γραμμής τίτλου (καρτέλες στο πάνω μέρος)">
 <!ENTITY Ctr_notabfog		"Αφαίρεση ομίχλης φόντου (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Αφαίρεση χρώματος φόντου (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Μείωση χώρου πάνω από την εργαλειοθήκη (εάν είναι δυνατόν)">
@@ -226,7 +226,7 @@
 <!ENTITY Ctr_altmenubarpos	"Εναλλακτική θέση (παρακάτω από τη γραμμή τίτλου του &brandShortName;)">
 <!ENTITY Ctr_menubarnofog	"Αφαίρεση χρώματος/ομίχλης φόντου (Windows AeroGlass/8)">
 
-<!ENTITY Ctr_aerocolors		"Μπλε χρώματα «Aero» για βασικές εργαλειοθήκες και καρτέλες">
+<!ENTITY Ctr_aerocolors		"Μπλε χρώματα «Aero» για εργαλειοθήκες και καρτέλες">
 <!ENTITY Ctr_hidenavbar		"Εργαλειοθήκη πλοήγησης: απόκρυψη εργαλειοθήκης">
 <!ENTITY Ctr_nobookbarbg	"Εργαλειοθήκη σελιδοδεικτών: αφαίρεση χρώματος φόντου">
 <!ENTITY Ctr_nonavbarbg		"Εργαλειοθήκη πλοήγησης: αφαίρεση χρώματος φόντου">
@@ -235,9 +235,9 @@
 <!ENTITY Ctr_nonavborder	"Εργαλειοθήκη σελιδοδεικτών: προσθήκη περιγράμματος κορυφής στην εργαλειοθήκη">
 <!ENTITY Ctr_nonavtbborder	"Εργαλειοθήκες κορυφής: αφαίρεση περιγραμμάτων εργαλειοθήκης">
 <!ENTITY Ctr_hidesbclose	"Πλευρικές στήλες: απόκρυψη κουμπιού κλεισίματος πλευρικής στήλης">
-<!ENTITY Ctr_notextshadow	"Toolbars: hide shadow for toolbar text and tab text">
+<!ENTITY Ctr_notextshadow	"Εργαλειοθήκες: απόκρυψη σκιάς κειμένου εργαλειοθηκών και καρτελών">
 <!ENTITY Ctr_chevronfix		"Εργαλειοθήκη πλοήγησης: απόκρυψη διπλού βέλους («σιρίτι») στο τέλος της εργαλειοθήκης">
-<!ENTITY Ctr_tbsep_winc		"Top toolbars: additional toolbar separators">
+<!ENTITY Ctr_tbsep_winc		"Εργαλειοθήκες κορυφής: επιπρόσθετα διαχωριστικά εργαλειοθηκών">
 
 <!ENTITY Ctr_closeabarbut	"Απόκρυψη κουμπιού κλεισίματος εργαλειοθήκης πρόσθετων">
 <!ENTITY Ctr_highaddonsbar	"Αύξηση ύψους">
@@ -258,33 +258,34 @@
 <!ENTITY Ctr_otherctroptns	"Άλλες ρυθμίσεις">
 <!ENTITY Ctr_cuibotbuttons	"Επιπρόσθετα κουμπιά στη λειτουργία προσαρμογής">
 <!ENTITY Ctr_bookmarkoinpw	"Καταχώριση «&Ctr_openInPrivateWindow;» στο μενού περιεχομένου σελιδοδεικτών">
-<!ENTITY Ctr_nodevtheme		"Prevent 'Developer Theme' from being enabled">
+<!ENTITY Ctr_nodevtheme		"Αποτροπή ενεργοποίησης του «Θέματος έκδοσης για προγραμματιστές»">
 
 <!ENTITY Ctr_experttweaks	"Προηγμένες">
 <!ENTITY Ctr_fx33layers		"Ο &brandShortName; 33+ εισήγαγε «νέα χαρακτηριστικά απόδοσης», τρεχόντως υπεύθυνα για το «κρέμασμα καρτελών» σε ορισμένα συστήματα. Αποεπιλέγοντας αυτή την προτίμηση επιλύεται αυτό το ζήτημα.">
 <!ENTITY Ctr_fx34search		"Ο &brandShortName; 34+ εισήγαγε μία «νέα διεπαφή αναζήτησης». Αποεπιλέγοντας αυτή την προτίμηση επαναφέρεται η προηγούμενη διεπαφή.">
 <!ENTITY Ctr_fx34loop		"Ο &brandShortName; 34+ εισήγαγε δυνατότητες «κλήσης και συνομιλίας». Αποεπιλέγοντας αυτή την προτίμηση αφαιρούνται αυτές οι δυνατότητες.">
-<!ENTITY Ctr_fx35devtheme	"Ο &brandShortName; 35+ εισήγαγε ένα νέο «Θέμα δημιουργού». Αποεπιλέγοντας αυτές τις προτιμήσεις απενεργοποιούνται το «Θέμα δημιουργού» και το κουμπί του στη λειτουργία προσαρμογής.">
+<!ENTITY Ctr_fx35devtheme	"Ο &brandShortName; 35+ εισήγαγε ένα νέο «Θέμα για προγραμματιστές». Αποεπιλέγοντας αυτές τις προτιμήσεις απενεργοποιούνται το «Θέμα για προγραμματιστές» και το κουμπί του στη λειτουργία προσαρμογής.">
 <!ENTITY Ctr_fx36prefs		"Ο &brandShortName; 36+ εισήγαγε προβολή επιλογών σε καρτέλα. Αποεπιλέγοντας αυτή την προτίμηση επαναφέρεται το παλιό παράθυρο επιλογών.">
-<!ENTITY Ctr_fx38reader		"&brandShortName; 38+ introduced a new 'reader mode'. Unchecking these preferences disables it and removes its icon from location bar.">
-<!ENTITY Ctr_fx38pocket		"&brandShortName; 38.0.5+ introduced the 'Pocket' feature. Unchecking this preference disables it and removes its button from the toolbars.">
-<!ENTITY Ctr_e_omtc			"OMTC / hanging tabs issue">
-<!ENTITY Ctr_e_searchui		"Search appearance">
-<!ENTITY Ctr_e_loop			"Calling and conversation">
-<!ENTITY Ctr_e_deved		"Developer Edition Theme">
-<!ENTITY Ctr_e_prefsui		"Preferences in tab">
-<!ENTITY Ctr_e_readermode	"Reader mode">
+<!ENTITY Ctr_fx38reader		"Ο &brandShortName; 38+ εισήγαγε μια νέα «λειτουργία ανάγνωσης». Αποεπιλέγοντας αυτές τις προτιμήσεις απενεργοποιείται και αφαιρείται το εικονίδιό της από τη γραμμή τοποθεσιών.">
+<!ENTITY Ctr_fx38pocket		"Ο &brandShortName; 38.0.5+ εισήγαγε το χαρακτηριστικό «Pocket». Αποεπιλέγοντας αυτή την προτίμηση απενεργοποιείται και αφαιρείται το κουμπί του από τις εργαλειοθήκες.">
+<!ENTITY Ctr_fx38pocket2	"Note: Moving 'Pocket'-button to 'customizing palette' before disabling this preference also removes 'Pocket' entries in bookmarks and reader menus.">
+<!ENTITY Ctr_e_omtc			"Ζήτημα OMTC / κρέμασμα καρτελών">
+<!ENTITY Ctr_e_searchui		"Εμφάνιση αναζήτησης">
+<!ENTITY Ctr_e_loop			"Κλήση και συνομιλία">
+<!ENTITY Ctr_e_deved		"Θέμα έκδοσης για προγραμματιστές">
+<!ENTITY Ctr_e_prefsui		"Επιλογές σε καρτέλα">
+<!ENTITY Ctr_e_readermode	"Λειτουργία ανάγνωσης">
 <!ENTITY Ctr_e_pocket		"Pocket">
 
 
 <!ENTITY Ctr_pw_settings	"Ρυθμίσεις">
 <!ENTITY Ctr_pw_set_reset	"Επαναφορά προεπιλογών">
 <!ENTITY Ctr_pw_set_predef	"Προκαθορισμένες κλασικές">
-<!ENTITY Ctr_pw_set_preaus	"Προκαθορισμένες &brandShortName;">
+<!ENTITY Ctr_pw_set_preaus	"Προκαθορισμένες του &brandShortName;">
 <!ENTITY Ctr_pw_set_export	"Εξαγωγή προτιμήσεων">
 <!ENTITY Ctr_pw_set_import	"Εισαγωγή προτιμήσεων">
-<!ENTITY Ctr_pw_set_syncon	"Add to Sync">
-<!ENTITY Ctr_pw_set_syncoff	"Remove from Sync">
+<!ENTITY Ctr_pw_set_syncon	"Προσθήκη στο «Sync»">
+<!ENTITY Ctr_pw_set_syncoff	"Αφαίρεση από το «Sync»">
 
 <!ENTITY Ctr_special_font	"Οι ρυθμίσεις χρώματος φόντου είναι για το προεπιλεγμένο θέμα μόνο!">
 <!ENTITY Ctr_special_info	"Ορισμένες επιλογές ενδέχεται να μην προσφέρουν ορατές αλλαγές σε όλες τις περιπτώσεις">
