--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -268,6 +268,7 @@
 <!ENTITY Ctr_fx36prefs		"&brandShortName; 36+ jo 'nastajenja w rejtarku' zawjadł. Gaž znjemóžnijośo toś to nastajenje, se stare wokno nastajenjow wótnowijo.">
 <!ENTITY Ctr_fx38reader		"&brandShortName; 38+ jo nowy 'cytański modus' zawjadł. Gaž toś te nastajenja se wótwoliju, znjemóžnijo se a jogo symbol wótpórajo se z adresowego póla.">
 <!ENTITY Ctr_fx38pocket		"&brandShortName; 38.0.5+ jo funkciju 'Pocket' zawjadł. Gaž toś to nastajenje se wótwolijo, se wóna znjemóžnijo a jeje tłocašk wótpórajo se ze symbolowych rědkow.">
+<!ENTITY Ctr_fx38pocket2	"Note: Moving 'Pocket'-button to 'customizing palette' before disabling this preference also removes 'Pocket' entries in bookmarks and reader menus.">
 <!ENTITY Ctr_e_omtc			"OMTC / problem z wisecymi rejtarkami">
 <!ENTITY Ctr_e_searchui		"Pytański pówjerch">
 <!ENTITY Ctr_e_loop			"Telefoněrowanje a konwersacija">
