--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -269,6 +269,7 @@
 <!ENTITY Ctr_fx36prefs		"&brandShortName; 36+ wprowadził opcje w karcie. Odznaczenie tego ustawienia przywraca stare okno opcji.">
 <!ENTITY Ctr_fx38reader		"&brandShortName; 38+ wprowadził nowy 'tryb czytnika'. Odznaczenie tych ustawień wyłączy go oraz usunie jego ikonę z paska adresu.">
 <!ENTITY Ctr_fx38pocket		"&brandShortName; 38.0.5+ wprowadził funkcję 'Pocket'. Odznaczenie tego ustawienia wyłączy ją oraz usunie jej ikonę z pasków narzędzi.">
+<!ENTITY Ctr_fx38pocket2	"Note: Moving 'Pocket'-button to 'customizing palette' before disabling this preference also removes 'Pocket' entries in bookmarks and reader menus.">
 <!ENTITY Ctr_e_omtc			"Problem z OMTC/zawieszonymi kartami">
 <!ENTITY Ctr_e_searchui		"Wygląd wyszukiwania">
 <!ENTITY Ctr_e_loop			"Dzwonienie i konwersacja">
